--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
+    "@formspree/react": "^2.5.4",
     "antd": "^5.14.1",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
-    "react-toastify": "^10.0.4",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
